objects/CPM__c.object
<CustomObject>
    <fields>
        <fullName>AR_90_Write_Off__c</fullName>
        <label>AR &gt; 90 Write-Off</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>A_R_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/R Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPM_Data18</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CPMs</relationshipLabel>
        <relationshipName>CPM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Region__c</fullName>
        <formula>Account_Name__r.Owner.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Sales_Opportunity_Segment_1_M__c</fullName>
        <label>Additional Sales Opportunity Segment 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Sales_Opportunity_Segment_1__c</fullName>
        <label>Additional Sales Opportunity Segment 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Sales_Opportunity_Segment_2_M__c</fullName>
        <label>Additional Sales Opportunity Segment 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Sales_Opportunity_Segment_2__c</fullName>
        <label>Additional Sales Opportunity Segment 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Sales_Opportunity_Segment_3_M__c</fullName>
        <label>Additional Sales Opportunity Segment 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Sales_Opportunity_Segment_3__c</fullName>
        <label>Additional Sales Opportunity Segment 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_of_Days__c</fullName>
        <formula>NOW() - Approval_Action_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Analyst_Notes__c</fullName>
        <label>Analyst Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue_calc__c</fullName>
        <formula>Total_Contract_Revenue_Gross__c /  Length_of_Term_years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Sales_Dollar_Impact_1_M__c</fullName>
        <label>Annualized Sales Dollar Impact 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Sales_Dollar_Impact_1__c</fullName>
        <label>Annualized Sales Dollar Impact 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Sales_Dollar_Impact_2_M__c</fullName>
        <label>Annualized Sales Dollar Impact 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Sales_Dollar_Impact_2__c</fullName>
        <label>Annualized Sales Dollar Impact 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Sales_Dollar_Impact_3_M__c</fullName>
        <label>Annualized Sales Dollar Impact 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualized_Sales_Dollar_Impact_3__c</fullName>
        <label>Annualized Sales Dollar Impact 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Action_Date__c</fullName>
        <description>This date field changes at every step of the approval process.</description>
        <label>Approval Action Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Start_time__c</fullName>
        <label>Approval Start time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approval Recalled</fullName>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Rejected_Date__c</fullName>
        <label>Approved/Rejected Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_for_Analyst_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for Analyst Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Days_to_Pay_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Historical Average Days to Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backend_IMU_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Backend IGM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Backend_IMU_Projected__c</fullName>
        <label>Backend IGM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CBS_IMU__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>CBS IGM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>COGS__c</fullName>
        <label>COGS $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPD_IMU__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>CPD IGM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CPM_Analyst_Name__c</fullName>
        <description>CPM Analyst Name from Excel file</description>
        <label>CPM Analyst Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPM_Date__c</fullName>
        <label>CPM Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CPM_Document__c</fullName>
        <description>The CPM Document housed in SpringCM</description>
        <label>CPM Document SpringCM</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CPM_Expiration_Date_Auto__c</fullName>
        <formula>CPM_Date__c + 90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPM Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPM_Expiration_Date__c</fullName>
        <label>CPM Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPM_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <label>CPM Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPM_Type__c</fullName>
        <label>CPM Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Analyst_Assignment__c</fullName>
        <formula>Support_Number__r.Approved_for_Analyst_Assignment__c</formula>
        <label>Case Analyst Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <formula>Support_Number__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT( Support_Number__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Rebate__c</fullName>
        <label>Cash Rebate $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cashflow_Test__c</fullName>
        <label>Cashflow Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAILS CASHFLOW</fullName>
                </value>
                <value>
                    <fullName>PASS CASHFLOW</fullName>
                </value>
                <value>
                    <fullName>NO UPFRONT MONEY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Catalog_Assortment__c</fullName>
        <label>Catalog Assortment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed_Revenue__c</fullName>
        <label>Committed Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Compliance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPM_Data17</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contribution_Margin_Historical_Percent__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Historical Contribution Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Contribution_Margin_Projected_Dollar__c</fullName>
        <label>Contribution Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contribution_Margin_Projected_Percent__c</fullName>
        <label>Contribution Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Core_IMU_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Core IGM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Core_IMU_Projected__c</fullName>
        <label>Core IGM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Cost_of_Credit__c</fullName>
        <label>Cost of Credit $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_AOV_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>% Of Orders Below $50.00</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Conversion_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Historical Conversion $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Performance_Rebate_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Historical Performance Rebate $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cust_ID__c</fullName>
        <formula>Account_Name__r.AOPS_Cust_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cust ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Customer</fullName>
                </value>
                <value>
                    <fullName>Current Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_CPM_Completed__c</fullName>
        <label>Date CPM Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_CPM_Launched__c</fullName>
        <label>Date CPM Launched</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Fee_MOV__c</fullName>
        <label>Delivery Fee/MOV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom (See Analyst Notes)</fullName>
                </value>
                <value>
                    <fullName>MOV $50</fullName>
                </value>
                <value>
                    <fullName>MOV $50 / Tiered SOF</fullName>
                </value>
                <value>
                    <fullName>NONE - Need VP Approval</fullName>
                </value>
                <value>
                    <fullName>Tiered Small Order Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description_Of_Potential_Opportunity_1_M__c</fullName>
        <label>Description Of Potential Opportunity 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Of_Potential_Opportunity_1__c</fullName>
        <label>Description Of Potential Opportunity 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Of_Potential_Opportunity_2_M__c</fullName>
        <label>Description Of Potential Opportunity 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Of_Potential_Opportunity_2__c</fullName>
        <label>Description Of Potential Opportunity 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Of_Potential_Opportunity_3_M__c</fullName>
        <label>Description Of Potential Opportunity 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_Of_Potential_Opportunity_3__c</fullName>
        <label>Description Of Potential Opportunity 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desktop_Delivery_Amount__c</fullName>
        <label>Desktop Delivery $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Desktop_Delivery__c</fullName>
        <label>Desktop Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deviated_Cost_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Historical Deviated Cost $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Director_CPD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Director CPD</description>
        <label>Managing Director CPD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPMs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Director_Tech__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Director Technology</description>
        <label>Managing Director Tech</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPMs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>District_Sales_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>District Sales Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPM_Data16</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_to_Reminder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email to Reminder</label>
        <referenceTo>CPM__c</referenceTo>
        <relationshipLabel>CPMs</relationshipLabel>
        <relationshipName>CPMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Everything_Else_Cap_Impact__c</fullName>
        <label>Everything Else Cap Impact</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Everything_Else_Price_Cap__c</fullName>
        <label>Everything Else Price Cap</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Executed_CPM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executed CPM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extension_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extension Account Name</label>
        <referenceTo>Account_Extension__c</referenceTo>
        <relationshipLabel>CPMs</relationshipLabel>
        <relationshipName>CPMs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FURN_IMU__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>FURN IGM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_IMU_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Historical Financial IMU $ (TDC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecasted_AOV__c</fullName>
        <label>Forecasted AOV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <label>Freight $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_IMU__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Furniture IMU % (TDC)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_IMU_TDC__c</fullName>
        <label>Gross IMU % (TDC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Sales_Historical__c</fullName>
        <label>Historical Gross Sales $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Historic_Payment_Terms__c</fullName>
        <label>Historic Payment Terms</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Pending_Approval__c</fullName>
        <label># of Hours Pending Approval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Completion_Date_1_M__c</fullName>
        <label>Implementation Completion Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Completion_Date_1__c</fullName>
        <label>Implementation Completion Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Completion_Date_2_M__c</fullName>
        <label>Implementation Completion Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Completion_Date_2__c</fullName>
        <label>Implementation Completion Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Completion_Date_3_M__c</fullName>
        <label>Implementation Completion Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Completion_Date_3__c</fullName>
        <label>Implementation Completion Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Gross_Margin_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Historical Initial Gross Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Gross_Margin_Percent_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Historical Initial Gross Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Items_on_Core__c</fullName>
        <label># Of Items on Core Lists</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Approval_Notification_Date__c</fullName>
        <description>Last Approval Notification Date</description>
        <label>Last Approval Notification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Length_of_Term_years__c</fullName>
        <label>Length of Term (years)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Margin_Erosion__c</fullName>
        <label>Margin Erosion $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Sector__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standalone Small &lt; $40K</fullName>
                </value>
                <value>
                    <fullName>Standalone Small $40K-$75K</fullName>
                </value>
                <value>
                    <fullName>Standalone Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Standalone Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Standalone Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Standalone Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>Standalone Enterprise $1M+</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Small &lt; $40K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Small $40K-$75K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>Healthcare GPO Enterprise $1M+</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Small &lt; $40K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Small $40K-$75K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>Buying Groups Enterprise $1M+</fullName>
                </value>
                <value>
                    <fullName>Tier 1 Small &lt; $40K</fullName>
                </value>
                <value>
                    <fullName>Tier 1 Small $40K-$75K</fullName>
                </value>
                <value>
                    <fullName>Tier 1 Medium $75K-$150K</fullName>
                </value>
                <value>
                    <fullName>Tier 1 Standard $150K-$250K</fullName>
                </value>
                <value>
                    <fullName>Tier 1 Key $250K-$500K</fullName>
                </value>
                <value>
                    <fullName>Tier 1 Major $500K-$1M</fullName>
                </value>
                <value>
                    <fullName>Tier 1 Enterprise $1M+</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Local</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_IGM_Customer_Margin_Dollar__c</fullName>
        <label>Net IGM / Customer Margin $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_IGM_Customer_Margin_Percent__c</fullName>
        <label>Net IGM / Customer Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_IMU_TDC_Dollar__c</fullName>
        <label>Net IMU $ (TDC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Net_IMU_TDC_Percent__c</fullName>
        <label>Net IMU % (TDC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Sales_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Historical Net Sales $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NextApproverIdUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NextApproverIdUser</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CPMs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_ApproverId__c</fullName>
        <label>Next ApproverId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Core_Catalog__c</fullName>
        <label>Non-Core Catalog</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Now_48__c</fullName>
        <formula>Now() - 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Now-48</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Vendor_Funds__c</fullName>
        <label>Other Vendor Funds $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Out_Clause__c</fullName>
        <label>Out Clause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>30 day</fullName>
                </value>
                <value>
                    <fullName>60 day</fullName>
                </value>
                <value>
                    <fullName>90 day</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outside_Services__c</fullName>
        <label>Outside Services</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PA_Name__c</fullName>
        <formula>Pricing_Analyst__r.FirstName + &apos; &apos; +  Pricing_Analyst__r.LastName</formula>
        <label>PA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Guardrail__c</fullName>
        <label>Guardrail Non-GPO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PM_Test__c</fullName>
        <label>Test Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAILS PM GUARDRAIL</fullName>
                </value>
                <value>
                    <fullName>PASS PM GUARDRAIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Paper_Cap_Impact__c</fullName>
        <label>Paper Cap Impact</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Paper_Price_Cap__c</fullName>
        <label>Paper Price Cap</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Paper__c</fullName>
        <description>Paper Price Lock</description>
        <label>Paper Price Lock (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Desktop__c</fullName>
        <label>% Desktop</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Rebate__c</fullName>
        <label>Performance Rebate $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pocket_Margin_Historical__c</fullName>
        <description>Historical Information (12 months)</description>
        <label>Historical Pocket Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Pocket_Margin_Projected__c</fullName>
        <label>Pocket Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Potential_Igm_Impact_1_M__c</fullName>
        <label>Potential IGM% Impact 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Potential_Igm_Impact_1__c</fullName>
        <label>Potential IGM% Impact 1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Potential_Igm_Impact_2_M__c</fullName>
        <label>Potential IGM% Impact 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Potential_Igm_Impact_2__c</fullName>
        <label>Potential IGM% Impact 2</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Potential_Igm_Impact_3_M__c</fullName>
        <label>Potential IGM% Impact 3</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>